<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgone">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="@dimen/_10sdp"
            android:text="@string/technician_default"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="@dimen/_10sdp"
            android:text="@string/do_you_have_technician"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ll_boy_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@color/red"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@color/red"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_boy_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:accessibilityHeading="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/edittext_white_bottom"
                android:inputType="text"
                android:textColor="@color/txtColor"
                android:textCursorDrawable="@drawable/cursor_white_animated"
                tools:ignore="Autofill,LabelFor" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_mobile_number"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edt_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_white_bottom"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/txtColor"
                android:textCursorDrawable="@drawable/cursor_white_animated"
                tools:ignore="Autofill,LabelFor" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_circle_button"
                android:text="@string/action_save"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>