<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgone">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="@dimen/_10sdp"
            android:text="@string/defaulttitle"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="@dimen/_10sdp"
            android:text="@string/defaulttank"
            android:textColor="@color/txtColor"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:padding="@dimen/_10sdp"
            android:text="@string/addtankcontent"
            android:textColor="@color/txtColor"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:accessibilityHeading="true"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img_minus"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/minus" />

        <TextView
            android:id="@+id/txt_number_ponds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/rounded_boarder_button"
            android:padding="@dimen/_10sdp"
            android:text="@string/one"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_plus"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/plusone" />


    </LinearLayout>


</RelativeLayout>