<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="VerificationViewModel"
            type="com.odos.smartaqua.prelogin.verification.VerificationViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/poppins_medium"
                android:id="@+id/countDownText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:ignore="RtlCompat" />

            <TextView
                android:fontFamily="@font/poppins_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_code_that_was_send_to"
                android:textAlignment="center"
                android:textColor="@color/txtColor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/phonenumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold" />

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#222222"
                android:textSize="18sp"
                app:cursorColor="@color/colorAccent"
                app:cursorWidth="2dp"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="5dp"
                app:itemWidth="36dp"
                app:lineColor="#2f64ba"
                app:lineWidth="2dp"
                app:viewType="rectangle" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rounded_circle_button"
                android:onClick="@{(v) -> VerificationViewModel.onVerifyClick(v)}"
                android:paddingLeft="@dimen/_40sdp"
                android:paddingRight="@dimen/_40sdp"
                android:text="@string/submit"
                android:textColor="@color/white"/>


            <TextView
                android:fontFamily="@font/poppins_medium"
                android:id="@+id/txtResend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/i_didn_t_get_a_code"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:onClick="@{(v) -> VerificationViewModel.onResendClick(v)}"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/poppins_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/tap_continue_to_accept_our_terms_data_policy_the_privacy_policy_and_terms_of_service"
                android:textAlignment="center"
                android:textColor="@color/txtColor" />
        </LinearLayout>

    </ScrollView>

</layout>