<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/dummyicon" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/bgapp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/txtColor" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:gravity="end"
                android:padding="@dimen/_10sdp" />


            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/action_cancel"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:visibility="invisible" />


            <TextView
                android:id="@+id/txt_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/red" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>